<resources>
    <string name="app_name">QR_Gen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="lowPortTitle">Lower Port</string>
    <string name="outerPortTitle">Outer Port</string>
    <string name="autonomous">Autonomous</string>
    <string name="teleop">Teleoperated</string>
    <string name="auto_line">Passed Initiation Line</string>
    <string name="other">Additional Details</string>
    <string name="defense">Defense</string>
    <string name="team_number">Team Number</string>
    <string name="match_number">Match Number</string>


    <string name="level_zero">0</string>
    <string name="level_one">1</string>
    <string name="level_two">2</string>
    <string name="level_three">3</string>
    <string name="level_four">4</string>
    <string name="level_five">5</string>

    <string name="comments">Comments</string>
    <string name="clear_form_button">CLEAR FORM</string>

    <string name="sign_in_text">Please enter the necessary information to begin scouting</string>
    <string name="competition">Competition:</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="date_picker_title">Date of Scouting:</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="climb_title">Climb</string>
    <string name="climb_checkbox">Successfully climbed</string>
    <string name="back_to_menu_button">Back to Menu</string>
    <string name="title_activity_scouting_tabbed">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="match_types_array">
        <item>Q</item>
        <item>QF</item>
        <item>SF</item>
        <item>F</item>
    </string-array>

    <string-array name="sort_array">
        <item>Date</item>
    </string-array>

    <string-array name="filter_array">
        <item>Team Number</item>
        <item> Competition</item>
        <item>Scout</item>
        <item>Date</item>
    </string-array>

</resources>
