<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/climb_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/climb_title"
            android:textSize="18dp"
            style="?android:listSeparatorTextViewStyle"/>

        <CheckBox
            android:id="@+id/climb_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/climb_checkbox"
            android:textSize="18dp"
            />

        <TextView
            android:paddingTop="50dp"
            android:id="@+id/other_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="24dp"
            style="?android:listSeparatorTextViewStyle" />


        <TextView
            android:id="@+id/defenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            android:textSize="18dp"
            style="?android:listSeparatorTextViewStyle"/>

        <RadioGroup
            android:id="@+id/defense_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/level_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_zero"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/level_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_one"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/level_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_two"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/level_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_three"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/level_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_four"
                android:layout_weight="1"/>

            <RadioButton android:id="@+id/level_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_five"
                android:layout_weight="1"/>
        </RadioGroup>

        <TextView
            android:id="@+id/comments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textSize="18dp"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/gen_QR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Generate QR code"
                android:layout_weight="1">
            </Button>

            <Button
                android:id="@+id/nav_to_menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Continue to match list"
                android:layout_weight="1">
            </Button>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>