<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/clear_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_form_button">
            </Button>

            <TextView
                android:id="@+id/autonomous_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autonomous"
                android:textSize="24dp"
                style="?android:listSeparatorTextViewStyle"/>



            <CheckBox
                android:id="@+id/tarmac_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tarmac_cross"
                android:textSize="18dp"
                />

            <TextView
                android:paddingTop="50dp"
                android:id="@+id/teleop_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teleop"
                android:textSize="24dp"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/highportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outerPortTitle"
                android:textSize="18dp"
                style="?android:listSeparatorTextViewStyle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/highportpointsdec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/decrease">
                </Button>

                <TextView
                    android:id="@+id/highportpoints"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25dp">
                </TextView>

                <Button
                    android:id="@+id/highportpointsinc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/increase">
                </Button>
            </LinearLayout>
            <TextView
                android:id="@+id/lowportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowPortTitle"
                android:textSize="18dp"
                style="?android:listSeparatorTextViewStyle"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp">
                <Button
                    android:id="@+id/lowportpointsdec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/decrease">
                </Button>

                <TextView
                    android:id="@+id/lowportpoints"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25dp">
                </TextView>

                <Button
                    android:id="@+id/lowportpointsinc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/increase">
                </Button>
            </LinearLayout>

            <TextView
                android:id="@+id/other_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="24dp"
                style="?android:listSeparatorTextViewStyle" />


            <TextView
                android:id="@+id/climbTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Climb"
                android:textSize="18dp"
                style="?android:listSeparatorTextViewStyle"/>

            <RadioGroup
                android:id="@+id/climb_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/level_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_zero"
                    android:layout_weight="1"/>

                <RadioButton android:id="@+id/level_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_one"
                    android:layout_weight="1"/>

                <RadioButton android:id="@+id/level_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_two"
                    android:layout_weight="1"/>

                <RadioButton android:id="@+id/level_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_three"
                    android:layout_weight="1"/>

                <RadioButton android:id="@+id/level_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_four"
                    android:layout_weight="1"/>

            </RadioGroup>

            <TextView
                android:id="@+id/comments_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="18dp"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp">
            </EditText>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_send" />


    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"
        />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>


